@@ -1,9 +1,6 @@
-<!-- Automagically generated by the ToDo program on 2005-04-01 -->
+<!-- Automagically generated by the ToDo program on 04/01/05, 12:35 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="medium" time="1112293604">
-        Check for $PORTDIR/CVS and if not exists, only update metadata cache when the user has sync'd.
-    </note>
 </todo>
